# Explore-To-OpenCV

./: .gitignore  .gitmodules
demos/: .gitignore
demos/AroundViewMonitor/AVMDll/: AVMDll.cpp  AVMDll.sln  AVMDll.vcxproj  AVMDll.vcxproj.filters  CMakeLists.txt  OpenCVProcess.cpp  OpenCVProcess.h  dllmain.cpp
demos/AroundViewMonitor/AVMDll/Render/: CVTexture.cpp  CVTexture.h  Renderer_Quad.cpp  Renderer_Quad.h  Renderer_Triangle.cpp  Renderer_Triangle.h  Texture.cpp  Texture.h  shader.cpp  shader.hpp
demos/AroundViewMonitor/AVMDll/Shaders/: UnlitTexture.fragmentshader  UnlitTexture.vertexshader
demos/AroundViewMonitor/AVMDll/UnityPluginSource/: PlatformBase.h  RenderAPI_OpenGLCoreES.cpp  RenderDevice.cpp  RenderDevice.h  RenderingPlugin.cpp
demos/AroundViewMonitor/AVMExe/: AVMExe.cpp  AVMExe.vcxproj  AVMExe.vcxproj.filters
demos/AroundViewMonitor/AVMUnity/Assets/: AVMApp.cs  AVMController.cs  AVMDll.cs  AVMDll.exp  AVMDll.ilk  AVMDll.lib  AVMDllTest.cs  CVBridgeDll.cs  CVInteger.cs  CVRenderTexture.cs  CVTexture.cs  RenderToCVTexture.cs
demos/AroundViewMonitor/AVMUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
demos/CameraCalibration/: CameraCalibration.sln
demos/CameraCalibration/CameraCalibration/: Calibration.cpp  CameraCalibration.vcxproj  caliberation_result.txt
demos/CameraCalibration/Debug/: lnk{50287ACC-53BD-48CD-B513-FAE295DB26A0}.tmp
demos/Curling/: Corner.cpp  Curling.cpp  Curling.sln  Curling.vcxproj  Curling.vcxproj.filters  EllipsFillting.cpp  FindCurlings.cpp  FindEdges.cpp  FindIceArena_BigCircle.cpp  FindIceArena_LeftEdge.cpp  FindIceArena_MiddleCircle.cpp  FindIceArena_RightEdge.cpp  FindIceArena_TopEdge.cpp  Lines.cpp  RebuildIceArena.cpp  Utils.cpp  Utils.h  main.cpp
demos/EigenSharp/: EigenSharp.sln
demos/EigenSharp/EigenSharp/: EigenExporter.cpp  EigenSharp.vcxproj  EigenSharp.vcxproj.filters
demos/LocatingCamera/Assets/: CalculateMyPosition.cs  EigenSharp.cs  EigenSharp.ilk  EigenTest.cs  Future (0).mat  Future (1).mat  Future (10).mat  Future (2).mat  Future (3).mat  Future (4).mat  Future (5).mat  Future (6).mat  Future (7).mat  Future (8).mat  Future (9).mat  LoacatingCamera.cs  SaveDisplay.cs  StereoUV2XYZ.cs  TestObjectUV.cs
demos/LocatingCamera/ProjectSettings/: ProjectSettings.asset
demos/LocatingFeature/: LocatingFeature.sln
demos/LocatingFeature/LocatingFeature/: Calibration.cpp  Calibration.h  LocatingFeature.vcxproj  LocatingFeature.vcxproj.filters  StereoCameraLocating.cpp  StereoCameraLocating.h  main.cpp  stdafx.h
ext/opencv3.4_install/: OpenCVConfig.cmake  setup_vars_opencv3.cmd
ext/opencv3.4_install/x64/vc16/lib/: 1.txt  (+46 more)
pydemos/morphology/: circle_keral_dilate.py  erode.py  sharr.py
res/: 双目.rar
tutorial/: .gitignore  opencv2_debug_x64.props  tutorial.sln
tutorial/【OpenCV3版】《OpenCV3编程入门》书本配套源代码/: 配套程序说明.doc
(+144 files in other folders)
